<resources>
    <string name="app_name">CommonFrame</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_email">Email</string>
    <string name="login_tip">Already have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="region">Region</string>
    <string name="country_select">Select Region</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_user">New user</string>


    <string name="add_iaq">Add Device</string>
    <string name="user_manual">The user manual</string>
    <string name="about">About</string>
    <string name="online_consult">Online consult</string>
    <string name="faq">Help</string>
    <string name="logout">Exit</string>

    <string name="dashboard_title">IAQ</string>
    <string name="no_network">No network</string>

    <string name="unknown">--</string>
    <string name="iaq_disconnect">Device disconnect</string>
    <string name="getting_data">Getting data</string>
    <string name="get_data_fail">Failed to get data</string>

    <string name="status_good">GREAT</string>
    <string name="status_ok">GOOD</string>
    <string name="status_not_good">NOT GOOD</string>
    <string name="pm_unit">μg/m³</string>

    <string name="living_room">Living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="dining_room">Dining room</string>
    <string name="bathroom">Bathroom</string>
    <string name="study_room">Studyroom</string>
    <string name="kids_room">Kids room</string>
    <string name="garage">Garage</string>
    <string name="factory">Factory</string>
    <string name="hospital">Hospital</string>
    <string name="school">School</string>
    <string name="office">Office</string>
    <string name="Others">Others</string>

    <string name="temperature_unit">&#176;C</string>
    <string name="temperature_f_unit">&#176;F</string>
    <string name="percent">&#037;</string>
    <string name="share_image_to">Share it to</string>

    <string name="default_pm">--</string>
    <string name="pm">PM2.5</string>
    <string name="iq_unit">%</string>
    <string name="iq">IQ</string>
    <string name="know_iaq">Know more about Honeywell air quality monitor?</string>
    <string name="statistic_day">Daily</string>
    <string name="statistic_month">Monthly</string>
</resources>
