<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />


    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:orientation="vertical">

        <TextView
            style="@style/title_text_style"
            android:text="@string/region" />

        <EditText
            android:id="@+id/et_select_country"
            style="@style/edit_text_style"
            android:focusableInTouchMode="false"
            android:hint="@string/country_select" />

        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_frame"
            android:spinnerMode="dropdown"
            android:visibility="gone"></Spinner>
        <!--android:spinnerMode="dropdown"-->
        <!--android:background="@drawable/edittext_frame"-->
        <TextView
            style="@style/title_text_style"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone_number"
            style="@style/edit_text_style"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            style="@style/title_text_style"
            android:text="@string/password" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_frame"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="10dp"
                android:textColorHint="@color/text_color_hint" />

            <CheckBox
                android:id="@+id/ch_wifi_pwd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_style"
                android:button="@null"
                android:checked="false" />

        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_group"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/margin_start_end"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:textColor="#3F8DC4"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_below="@+id/ll_group"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginRight="@dimen/margin_start_end"
        android:text="@string/create_user"
        android:textColor="#3F8DC4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/bottom_button_style"
        android:enabled="true"
        android:text="@string/login" />


</LinearLayout>
