<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/welcome_bg_splash"
        android:scaleType="fitXY" />



    <include
        android:id="@+id/header"
        layout="@layout/layout_header"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_user_login"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tip" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login"
                android:textColor="@color/body_text_blue" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_start_end"
            android:layout_marginRight="@dimen/margin_start_end"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </LinearLayout>


</RelativeLayout>
